--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - develop
+      - kij
        # 🔐 branch 추가 가능
   pull_request:
     types: [opened, reopened, closed]
